[3, 4 단계 - 체스] 키아라(김도희) 미션 제출합니다. (#611)
* docs: 구현한 목록 체크 및 구현할 목록 작성

* feat: Piece의 점수를 갖는 enum 생성

* feat: 커맨드가 status인지 확인하는 기능 구현 및 테스트 코드 작성

* feat: enum의 순서를 보장하는 기능 구현

* feat: enum의 순서를 view가 정하는 기능 구현

* refactor: static import 추가

* fix: rank의 출력 순서 변경

* fix: end 명령어 입력 시 종료되도록 수정

* style: getter의 get키워드 제거

* refactor: 각 기물의 이동 가능 방향을 직접 호출할 수 있도록 수정

* feat: Pawn의 처음 이동을 boolean이 아닌 초기 위치 여부로 판단하는 기능 구현

* style: 메서드명 변경

* refactor: 기물이 같은지 비교하는 기능 수정

* style: 순서 유효성 검사 메서드 네이밍 변경

* refactor: 기물의 Empty 여부 확인 기능 변경

* test: Position에 대한 테스트 코드 작성

* test: Direction에 대한 테스트 코드 작성

* refactor: static import 추가

* refactor: static import 추가 및 자료형 명시

* fix: Pawn의 두번째 이동 제한 테스트 코드 수정

* feat: 기물의 이동 후 위치를 바꿔주는 기능 구현

* refactor: 기물이 움직일 수 있는 방향을 계산하는 기능 수정

* refactor: static import 추가

* style: 테스트코드 given-when-then 포맷 반영

* feat: 현재 점수를 구하는 기능 구현

* refactor: 기물의 팀 구분 기능 수정

* feat: 각 팀 점수 출력 기능 구현

* feat: 승리팀 출력 기능 구현

* refactor: 팀에 해당하는 기물만 확인하도록 수정

* refactor: 메서드 파라미터에 final 추가

* feat: King이 잡히면 게임을 종료하는 기능 구현

* feat: 보드 출력 시 file과 rank 표시

* docs: 4단계 기능 요구사항 목록 추가

* feat: DB 연결

* feat: Dao 인터페이스 구현

* docs: Query 속성명 변경 team -> color

* feat: DB에 불러올 보드 없을 경우 보드 생성 기능 구현

* feat: DB에 저장된 board 읽어오는 기능 구현 및 TODO 작성

* feat: DB update 기능을 delete와 save으로 구현

* feat: DB 테이블 초기화 기능 구현

* feat: File 표시 후 빈줄 추가

* test: Piece에 대한 PieceType 반환 메서드 구현

* feat: status 출력 후 게임 재개 기능 구현

* refactor: static import 추가

* style: 테스트 Display명 변경

* refactor: Piece를 이름이 아닌 Type으로 구분하는 기능 구현

* refactor: 테이블 생성 메서드 분리

* refactor: 사용하지 않는 파라미터 제거

* refactor: final 키워드 추가

* style: 코드 컨벤션 준수

* style: 매직 넘버 상수화

* style: 매직 넘버 상수화

* refactor: 타입 명시

* refactor: delete메서드 제거

* style: 기물의 타입명 변경 pieceType -> type

* style: board 검색 메서드명 변경 select -> find

* refactor: 객체에게 같은 팀인지 물어보도록 수정 및 네이밍 컨벤션 반영

* refactor: 배열을 리스트로 변환하는 중복 제거

* refa