@@ -1,7 +1,7 @@
 package chess.domain.position;
 
+import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Comparator;
 import java.util.List;
 
 public enum Rank {
@@ -15,31 +15,28 @@ public enum Rank {
 	TWO(2),
 	ONE(1);
 
-	private final int rank;
+	private final int value;
 
-	Rank(final int rank) {
-		this.rank = rank;
+	Rank(final int value) {
+		this.value = value;
 	}
 
 	public static Rank from(final int value) {
-		return Arrays.stream(Rank.values())
-			.filter((rank) -> value == rank.rank)
+		return ranks().stream()
+			.filter((rank) -> value == rank.value)
 			.findFirst()
 			.orElseThrow(IllegalArgumentException::new);
 	}
 
-	public Rank setNextRank(final int unit) {
-		return from((rank + unit));
-
-	}
-
-	public int rankValue() {
-		return rank;
-	}
-
 	public static List<Rank> ranks() {
-		final List<Rank> ranks = Arrays.asList(Rank.values());
-		ranks.sort(Comparator.naturalOrder());
-		return ranks;
+		return new ArrayList<>(List.of(values()));
+	}
+
+	public Rank nextRank(final int unit) {
+		return from((value + unit));
+	}
+
+	public int value() {
+		return value;
 	}
 }
